[package]
name = "nanotubes"
description = "Fancy websocket wrapper"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
async-tungstenite = "0.16.1"
uuid = "0.8.2"
retry = "1.3.0"
thiserror = "1.0.30"
miette = "3.2.0"
dashmap = "5.0.0"

[features]
async-tls = ["async-tungstenite/async-tls"]
async-std-runtime = ["async-tungstenite/async-std-runtime"]
async-native-tls = ["async-tungstenite/async-native-tls"]
tokio-runtime = ["async-tungstenite/tokio-runtime"]
tokio-native-tls = ["async-tungstenite/tokio-native-tls"]
tokio-rustls-native-certs = ["async-tungstenite/tokio-rustls-native-certs"]
tokio-rustls-webpki-roots = ["async-tungstenite/tokio-rustls-webpki-roots"]
tokio-openssl = ["async-tungstenite/tokio-openssl"]
gio-runtime = ["async-tungstenite/gio-runtime"]
